force-app/main/default/objects/College__c/College__c.object-meta.xml
<CustomObject>
    <description>College Objec for the CMS Application</description>
    <label>College</label>
    <nameField>
        <displayFormat>COLLEGE-{00000}</displayFormat>
        <label>College ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Colleges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>