force-app/main/default/objects/College__c/fields/College_Address__c.field-meta.xml
<CustomField>
    <fullName>College_Address__c</fullName>
    <description>College Address for the College Tab in CMS APP</description>
    <inlineHelpText>Enter the College Address</inlineHelpText>
    <label>College Address</label>
    <type>TextArea</type>
</CustomField>