force-app/main/default/objects/College__c/fields/College_Email__c.field-meta.xml
<CustomField>
    <fullName>College_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>College Email for the College Tab in CMS APP</description>
    <inlineHelpText>Email of the College</inlineHelpText>
    <label>College Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>