force-app/main/default/objects/College__c/fields/College_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>College_Mobile_Number__c</fullName>
    <description>College Mobile Number in College Tab in CMS APP</description>
    <inlineHelpText>Mobile number of the College</inlineHelpText>
    <label>College Mobile Number</label>
    <type>Phone</type>
</CustomField>