force-app/main/default/objects/College__c/fields/College_Name__c.field-meta.xml
<CustomField>
    <fullName>College_Name__c</fullName>
    <description>College Name for the College Tab in CMS APP</description>
    <inlineHelpText>Name of the College</inlineHelpText>
    <label>College Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>