force-app/main/default/objects/College__c/fields/College_Website__c.field-meta.xml
<CustomField>
    <fullName>College_Website__c</fullName>
    <description>College Website for the College Tab in CMS APP</description>
    <inlineHelpText>Enter Website of the College</inlineHelpText>
    <label>College Website</label>
    <type>Url</type>
</CustomField>