force-app/main/default/objects/College__c/recordTypes/Government_College.recordType-meta.xml
<RecordType>
    <fullName>Government_College</fullName>
    <active>true</active>
    <description>Government College for the CMS App</description>
    <label>Government College</label>
</RecordType>