force-app/main/default/objects/College__c/recordTypes/Private_College.recordType-meta.xml
<RecordType>
    <fullName>Private_College</fullName>
    <active>true</active>
    <description>Private College for the CMS App</description>
    <label>Private College</label>
</RecordType>